--- a/styles/index.css
+++ b/styles/index.css
@@ -19,11 +19,6 @@
 *::after,
  *::before{
 	--black-color: #252525;
-
-
-
-
-
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
@@ -33,123 +28,93 @@
 
 /* ### MOBILE CSS START ### */
 
-.header-container{
+header{
 	background-color: var(--black-color);
-	margin-bottom: 4rem;
-}
-
-.header{
-	display: flex;
-	z-index: 1;
-	justify-content: space-between;
-	align-items: center;
-	height: 10vh;
-	margin-bottom: 5rem;
-	padding: 0 1.5rem;
-	
-}
-
-.header-title{
+	height: 100%;
+	width: 100%;
 	color: white;
-	font-size: 1.25rem;
-	transform: scale(1);
-	text-transform: uppercase;
-	transition: all 1s ease;
-	text-decoration: none;
-}
-
-.header-title:hover{
-	transform: scale(1.05);
-	transform-origin: left;
-	cursor: pointer;
-}
-
-.header .hamburger-icon{
-	display: block;
-	transform: scale(1) rotate(0deg);
-	transition: all 1s ease-in-out;
-}
-
-.header .hamburger-icon:hover{
-	cursor: pointer;
-	transform: scale(1.1) rotate(180deg);
-	
-}
-
-.header-btn-container{
-	display: none;
 }
 
 .nav{
-	display: none;
+	height: 10vh;	
+	color: white;
+	padding: 1.25rem;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin-bottom: 2rem;
 }
 
-.hero-container{
-	display: flex;
-	height: 100%;
+.logo{
+	font-size: 1.25rem;
+}
+
+.hamburger-menu:hover{
+	cursor: pointer;
 }
 
 .hero{
-	background-color: var(--black-color);
-	padding: 0 1.5rem;
-	height: 40vh;
-	width: 100%;
+	position: relative;
+	height: 55vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: flex-start;
+	padding: 1.25rem;
+	overflow-x: hidden;
 }
 
 .hero-left-section{
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-	justify-content: center;
-}
-
-.hero-title{
-	z-index: 3;
-	color: white;
-	font-size: 3rem;
-	text-transform: uppercase;
-	margin-bottom: .5rem;
-}
-
-
-.hero-left-section .btn-container{
-	z-index: 55;
-	max-width: 70%;
+	z-index: 10;
+	align-self: left;
 }
 
 
 .hero-img{
-	display: block;
 	position: absolute;
-	background-image: url("../img/phone.png");
-	background-size: 400px;
-	background-position: -150px 0;
-	background-repeat: no-repeat;
-	transform: scaleX(-1);
-	width: 100%;
-	right: 0;
-	top: 100px;
-	height: 62%;
-	z-index: 1;
-	transition: all 1s ease;
-	overflow: clip;
+	right: -100px;
+	bottom: 0;
+	height: 90%;
+	z-index: 0;
 }
 
-.main-container{
-	padding: 0 1.5rem;
+.hero-img-desktop{
+	display: none;
 }
 
-.services-section{
-
+.hero .btn {
+	margin-top: 20px;
 }
+
+.hero-text{
+	font-size: 3.5rem;
+	z-index: 10;
+}
+
+.hero-subtitle{
+	z-index: 20;
+	align-self: center;
+	font-size: 1.5rem;
+}
+
+
+.hero-subtitle p{
+	text-align: center
+}
+
+
+
 
 
 @media (min-width:420px)  {
 
 	.hero-img{
-		background-position: -50px 0;
+		position: absolute;
+		right: -50px;
+		bottom: 0;
+		height: 100%;
+		z-index: 0;
 	}
-	
 
 }
 
@@ -158,93 +123,14 @@
 
 /*Desktop CSS*/
 @media (min-width:670px)  {
-	.header{
-		position: relative;
-
-		width: 90%;
-		margin: 0 auto;
-		display: grid;
-		grid-template-columns: repeat(2, 1fr);
-		justify-items: center;
-		align-items: center;
-	}
-
-	.header-title{
-		justify-self: start;
-	}
-
-	.header-btn-container{
-		display: block;
-		justify-self: end;
-		width: 60%;
-	}
-
-	.hamburger-icon-container{
-		display: none;
-	}
-
-	.hero-container{
-		width: 90%;
-		height: 55vh;
-		margin: 0 auto;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-	}
-
-	.hero{
-		display: flex;
-		width: 100%;
-		align-items: center;
-	}
-	.hero-left-section{
-	}
-
 	.hero-img{
-		background-image: url("../img/desktop.jpg");
-		height: 450px;
-		background-position: 0 50%;
-		background-size: cover;
-		width: 80%;
-		right: 0;
-		transform: scaleX(1);
-		border-top-left-radius: 99999px;
-		border-bottom-left-radius: 99999px;
-	}
-
-	.btn-container{
-		max-width: 80%;
-	}
-
-	br{
 		display: none;
 	}
-	
-}
 
-@media (min-width:1000px)  {
-	.header{
-		grid-template-columns: repeat(3, 1fr);
+	.hero-img-desktop{
+		display: block;
+		width: 50%;
 	}
-
-	.header .nav {
-		display: flex;
-		width: 100%;
-		justify-content: space-around;
-	}
-
-	.header .nav a{
-		text-decoration: none;
-		color: white;
-		font-size: 1rem;
-		font-weight: bold;
-		text-transform: uppercase;
-	}
-
-	/* .hero-img{
-		background-position: 0 -150px;
-	} */
-
 }
 
 
