--- a/styles/classes/input.css
+++ b/styles/classes/input.css
@@ -1,7 +1,7 @@
 .btn {
 	padding: .75rem 1.25rem;
 	background: none;
-	background-color: aqua;
+	background-color: gray;
 	outline: none;
 	border: none;
 	border-radius: .5em;
