--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,5 @@
 /*
-	Author: Daniel Cargar Mahyar
+	Author: Daniel Cargar Mahyar & Samuel Botansky
 	@Copyright Vocast
 
 	Notes:
@@ -36,7 +36,7 @@ header{
 	overflow: hidden;
 	position: relative;
 }
-
+	
 .nav{
 	height: 10vh;	
 	color: white;
@@ -126,7 +126,125 @@ main {
 	padding: 1.5rem;
 }
 
+.icons{
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+}
+.open-247{
+	margin-top: 1vh;
+	margin-bottom: 1vh;
+	font-size: medium;
+}
+.icon-title{
+	text-align: center;
+	margin-bottom: 10px;
+}
+.under-title{
+	margin-top: 5px;
+	margin-bottom: 1rem;
+}
+.slideshow{
+	background-color: #8d8d8d;
+	height: 200px;
+	/* cargar her er height til den box */
+	margin-bottom: 2rem;
 
+}
+.news{
+	background-color: #d6d6d6;
+
+}
+.container-news{
+	padding: 3px 16px;
+}
+.title-second-section{
+	font-size: x-large;
+	margin-top: 1rem;
+	margin-bottom: 2vh;
+	text-align: center;
+}
+.title-second-section-first{
+	margin-top: 2rem;
+}
+.news-section{
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+}
+.news-first{
+	width: 100%;
+	margin-bottom: 2rem;
+}
+.news-second{
+	width: 100%;
+}
+.third-section{
+	background-color: #d6d6d6;
+	height: 100%;
+	width: 100%;
+	overflow: hidden;
+	position: relative;
+	text-align: center;
+}
+.third-section-title{
+	padding: 1rem;
+	font-size: x-large;
+	font-weight: bolder;
+	text-align: center;
+	margin-top: 0.5rem;
+}
+.map-responsive{
+    overflow:hidden;
+	padding-bottom: 80%;
+    position: relative;
+    height:0;
+}
+.map-responsive iframe{
+    left: 0;
+	right: 0;
+	top: 1rem;
+    height:100%;
+    width:100%;
+    position:absolute;
+	border-radius: 0.5em;
+}
+
+.map-btn{
+	padding: 0.75rem 1.75rem;
+	background: none;
+	border: none;
+	border-radius: 999999px;
+	background-color: white;
+}
+.container-news p{
+	padding:1rem;
+}
+.map-text p{
+	padding: 1rem;
+}
+.btn-maps{
+	width: 50%; 
+	margin: 0 auto;
+	margin-top: .5rem;
+}
+footer{
+	background-color: #252525;
+	color: white;
+	height: 250px;
+}
+footer h2{
+	padding: 2rem;
+}
+.copyright{
+	background-color: #252525;
+	text-align: center;
+	padding-bottom: 1rem;
+}
+.copyright p{
+	color: #6d6d6d;
+	font-size: .75rem;
+}
 
 @media (min-width:420px)  {
 
@@ -137,7 +255,25 @@ main {
 		height: 100%;
 		z-index: 0;
 	}
-
+	.map-responsive{
+		overflow:hidden;
+		padding-bottom: 60%;
+		position: relative;
+		height:0;
+	}
+	.map-responsive iframe{
+		left: 0;
+		right: 0;
+		top: 1rem;
+		height:100%;
+		width:100%;
+		position:absolute;
+	}
+	.btn-maps{
+		width: 40%; 
+		margin: 0 auto;
+		margin-top: .5rem;
+	}
 }
 
 /* ### MOBILE CSS END ### */
@@ -201,6 +337,57 @@ main {
 		width: 80%;
 		margin: 0 auto;
 	}
+	.icons{
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		margin-left: 2rem;
+	}
+	.icon-title{
+		font-size: xx-large;
+		margin-bottom: 20px;
+	}
+	.under-title{
+		margin-top: 1rem;
+	}
+	.news-section{
+		display: flex;
+		flex-direction: row;
+		width: 100%;
+		height:auto;
+	}
+	.news-first{
+		width: 97.5%;
+		margin-right: 2.5%;
+		margin-bottom: 0;
+	}
+	.news-second{
+		width: 97.5%;
+		margin-left: 2.5%;
+	}
+	.map-responsive{
+		overflow:hidden;
+		padding-bottom: 40%;
+		position: relative;
+		height:0;
+	}
+	.map-responsive iframe{
+		left: 0;
+		right: 0;
+		top: 1rem;
+		height:100%;
+		width:100%;
+		position:absolute;
+	}
+	.btn-maps{
+		width: 25%; 
+		margin: 0 auto;
+		margin-top: .5rem;
+	}
+	.copyright p{
+		color: #6d6d6d;
+		font-size: 14px;
+	}
 }
 
 @media (min-width:1024px)  {
@@ -209,16 +396,77 @@ main {
 		bottom: 25px; 
 		height: 80%;
 	}
+	.icons{
+		justify-content: space-between;
+	}
+	.icon-title{
+		margin-bottom: 2rem;
+	}
 
 	.hero-text{
 		font-size: 4.5rem;
 		z-index: 10;
 	}
+	.second-section{
+		display: flex;
+		flex-direction: column;
+		height: auto;
+	}
+	.slideshow{
+		background-color: #8d8d8d;
+		width: 100%;
+		height: 300px;
+		/* cargar her er height til den box */
+	}
+	.news{
+		width: 100%;
+		background-color: #d6d6d6;
+	}
+	.container-news{
+		padding: 3px 1rem;
+	}
+	.title-second-section{
+		font-size: xx-large;
+	}
+	.third-section-title{
+		padding: 1rem;
+		font-size: x-large;
+		font-weight: bolder;
+		text-align: center;
+		margin-top: 1rem;
+	}
+	.map-responsive{
+		overflow:hidden;
+		padding-bottom: 30%;
+		position: relative;
+		height:0;
+	}
+	.map-responsive iframe{
+		left: 10%;
+		right: 10%;
+		top: 1rem;
+		height:80%;
+		width:80%;
+		position:absolute;
+		border-radius: .5em;
+	}
+	.btn-maps{
+		width: 20%; 
+		margin: 0 auto;
+		margin-top: .5rem;
+	}
 }
 
 @media (min-width:1280px)  {
-
+	.btn-maps{
+		width: 20%; 
+		margin: 0 auto;
+		margin-top: .5rem;
+		padding: 1rem;
+		font-size: large;
+	}
 }
+	
 
 /* @media (min-width:1000px)  {
 
@@ -227,3 +475,67 @@ main {
 	}
 
 } */
+@media (min-width:1430px)  {
+	.nav-links a {
+		text-decoration: none;
+		color: white;
+		font-weight: bold;
+		font-size: 1.25rem;
+	}
+	.logo{
+		font-size: 1.5rem;
+	}
+	.under-title{
+		margin-top: 5px;
+		margin-bottom: 1rem;
+		font-size: 20px;
+	}
+	.container-news p{
+		padding:1rem;
+		font-size: 20px;
+	}
+	.container-news h4{
+		padding:.5rem;
+		font-size: 24px;
+	}
+	.map-text p{
+		padding: 1rem;
+		font-size: 20px;
+	}
+	footer h2{
+		padding: 2rem;
+		font-size: 1.75rem;
+	}
+}
+
+@media (min-width:1540px){
+
+	.map-responsive{
+		overflow:hidden;
+		padding-bottom: 30%;
+		position: relative;
+		height:0;
+	}
+	.map-responsive iframe{
+		left: 20%;
+		right: 20%;
+		top: 1rem;
+		height:80%;
+		width:60%;
+		position:absolute;
+	}
+	.btn-maps{
+		width: 15%; 
+		margin: 0 auto;
+		margin-top: .5rem;
+		padding: 1rem;
+		font-size: 22px;
+	}
+}
+@media (min-width:1650px){
+	
+	footer h2{
+		font-size: 2rem;
+	}
+
+}
