Added final changes. Final product

--- a/styles/classes/input.css
+++ b/styles/classes/input.css
@@ -23,7 +23,7 @@
 }
 
 .btn.btn-primary {
-	background-color: grey;
+	background-color: orangered;
 	border-radius: 99999px;
 	padding: .75rem 1.75rem;
 }
